Version 3.0.0 - 2013-10-21
* Bug fixes (see mercurial logs for details)
* Add quantity and forecast_quantity fields on Lot
* Add lot in inventory
* Add Period Cache per lot

Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)

Version 2.4.0 - 2012-07-31
* Initial release