@@ -48,6 +48,19 @@ this repository contains the full copyright notices and license terms. -->
             <field name="perm_delete" eval="True"/>
         </record>
 
+        <record model="ir.action.act_window" id="act_move_form_relate_lot">
+            <field name="name">Moves</field>
+            <field name="res_model">stock.move</field>
+            <field name="domain">[('lot', '=', Eval('active_id'))]</field>
+            <field name="order">[('effective_date', 'DESC'), ('planned_date', 'DESC')]</field>
+        </record>
+        <record model="ir.action.keyword"
+            id="act_move_form_relate_lot_keyword1">
+            <field name="keyword">form_relate</field>
+            <field name="model">stock.lot,-1</field>
+            <field name="action" ref="act_move_form_relate_lot"/>
+        </record>
+
         <record model="stock.lot.type" id="type_supplier">
             <field name="code">supplier</field>
             <field name="name">Supplier</field>
